# LifeInTheGrid

./: Cargo.toml
crates/courtyard/: Cargo.toml
crates/courtyard/src/: main.rs
crates/sim_engine/: Cargo.toml
crates/sim_engine/src/: lib.rs
crates/sim_engine/src/elements/: composition.rs  compounds.rs  element.rs  elements.rs  mod.rs  operations.rs  tests.rs
crates/sim_engine/src/engine/: mod.rs  settings.rs
crates/sim_engine/src/map/: index.rs  mod.rs
crates/sim_interface/: Cargo.toml
crates/sim_interface/src/: main.rs
crates/sim_interface/src/map/: mod.rs
