[package]
name = "sim_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
sim_engine = { path = "../sim_engine"}
apis = { path = "../../../apis", features = ["bevy"]}
simple_logger = "5.0.0"
bevy_pancam = "0.11.1"
